Add role-based views and templates

--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/member_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/member_view.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Member Page</title>
+    <meta charset="UTF-8" />
+    <title>Member Dashboard</title>
 </head>
 <body>
     <h1>Welcome, Member!</h1>
-    <p>This page is only accessible to Member users.</p>
+    <p>This is the member dashboard.</p>
+    <a href="{% url 'logout' %}">Logout</a>
 </body>
 </html>
