--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/admin_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/admin_view.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Admin Page</title>
+    <meta charset="UTF-8" />
+    <title>Admin Dashboard</title>
 </head>
 <body>
     <h1>Welcome, Admin!</h1>
-    <p>This page is only accessible to Admin users.</p>
+    <p>This is the admin dashboard.</p>
+    <a href="{% url 'logout' %}">Logout</a>
 </body>
 </html>
