--- a/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/book_list.html
+++ b/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/book_list.html
@@ -1,4 +1,9 @@
 <h2>Book List</h2>
+
+{% if query %}
+  <p>Search results for "{{ query }}":</p>
+{% endif %}
+
 <ul>
   {% for book in books %}
     <li>
@@ -10,6 +15,8 @@
         <a href="{% url 'book_delete' book.pk %}">Delete</a>
       {% endif %}
     </li>
+  {% empty %}
+    <li>No books found{% if query %} for "{{ query }}"{% endif %}.</li>
   {% endfor %}
 </ul>
 
