--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,12 +1,13 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<article>
-    <h2>{{ post.title }}</h2>
-    <p>{{ post.content }}</p>
-    <p>By {{ post.author }} on {{ post.date_posted|date:"F d, Y" }}</p>
-    {% if user == post.author %}
-        <a href="{% url 'post-update' post.pk %}">Edit</a> |
-        <a href="{% url 'post-delete' post.pk %}">Delete</a>
-    {% endif %}
-</article>
+<h2>{{ post.title }}</h2>
+<p>{{ post.content }}</p>
+<p>By {{ post.author }} on {{ post.date_posted|date:"F d, Y" }}</p>
+
+{% if user == post.author %}
+    <a class="button" href="{% url 'blog:post-update' post.pk %}">Edit Post</a>
+    <a class="button" href="{% url 'blog:post-delete' post.pk %}">Delete Post</a>
+{% endif %}
+
+<a class="button" href="{% url 'blog:post-list' %}">Back to Posts</a>
 {% endblock %}
