--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -6,4 +6,5 @@
     {{ form.as_p }}
     <button type="submit">Submit</button>
 </form>
+<a class="button" href="{% url 'blog:post-list' %}">Cancel</a>
 {% endblock %}
