--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,13 +1,24 @@
 {% extends "blog/base.html" %}
 {% block content %}
 <h2>All Posts</h2>
+
+{% if user.is_authenticated %}
+    <a class="button" href="{% url 'blog:post-create' %}">Create New Post</a>
+{% endif %}
+
 {% for post in posts %}
-    <article>
-        <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
-        <p>{{ post.content|truncatechars:100 }}</p>
-        <p>By {{ post.author }} on {{ post.date_posted|date:"F d, Y" }}</p>
-    </article>
+<article>
+    <h3><a href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a></h3>
+    <p>{{ post.content|truncatechars:100 }}</p>
+    <p>By {{ post.author }} on {{ post.date_posted|date:"F d, Y" }}</p>
+    {% if user == post.author %}
+        <a class="button" href="{% url 'blog:post-update' post.pk %}">Edit</a>
+        <a class="button" href="{% url 'blog:post-delete' post.pk %}">Delete</a>
+    {% endif %}
+</article>
+<hr>
 {% empty %}
-    <p>No posts yet.</p>
+<p>No posts available.</p>
 {% endfor %}
+
 {% endblock %}
