--- a/django_blog/blog/templates/blog/home.html
+++ b/django_blog/blog/templates/blog/home.html
@@ -1,28 +1,15 @@
+{% load static %}
 {% extends "blog/base.html" %}
 {% block content %}
-<h1>Welcome to the Django Blog!</h1>
-<p>Explore the latest posts or share your own thoughts.</p>
+<h2>Latest Posts</h2>
 
-{% if user.is_authenticated %}
-    <p>Hello, <strong>{{ user.username }}</strong>!</p>
-    <a class="button" href="{% url 'blog:profile' %}">View Profile</a>
-    <a class="button" href="{% url 'blog:post-create' %}">Create a New Post</a>
-{% else %}
-    <a class="button" href="{% url 'blog:login' %}">Login</a>
-    <a class="button" href="{% url 'blog:register' %}">Register</a>
-{% endif %}
-
-<hr>
-
-<h2>Recent Posts</h2>
-<ul>
-    {% for post in posts|default_if_none:"" %}
-        <li>
-            <a href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a> 
-            by {{ post.author }} on {{ post.date_posted|date:"F d, Y" }}
-        </li>
-    {% empty %}
-        <li>No posts yet. Be the first to <a href="{% url 'blog:post-create' %}">create one</a>!</li>
-    {% endfor %}
-</ul>
+{% for post in posts %}
+  <div class="post">
+    <h3><a href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a></h3>
+    <p>{{ post.content|truncatewords:30 }}</p>
+    <p>By {{ post.author }} on {{ post.published_date|date:"F d, Y" }}</p>
+  </div>
+{% empty %}
+  <p>No posts available.</p>
+{% endfor %}
 {% endblock %}
