--- a/django_blog/blog/templates/blog/post_confirm_delete.html
+++ b/django_blog/blog/templates/blog/post_confirm_delete.html
@@ -1,10 +1,10 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<h2>Confirm Delete</h2>
+<h2>Delete Post</h2>
 <p>Are you sure you want to delete "{{ object.title }}"?</p>
 <form method="POST">
     {% csrf_token %}
     <button type="submit">Yes, delete</button>
 </form>
-<a href="{{ object.get_absolute_url }}">Cancel</a>
+<a href="{% url 'blog:post-detail' object.pk %}">Cancel</a>
 {% endblock %}
