--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,10 +1,9 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<h2>{% if form.instance.pk %}Update{% else %}Create{% endif %} Post</h2>
+<h2>{% if object %}Edit Post{% else %}New Post{% endif %}</h2>
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Submit</button>
+    <button type="submit">Save</button>
 </form>
-<a class="button" href="{% url 'blog:post-list' %}">Cancel</a>
 {% endblock %}
