--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -28,35 +28,37 @@
 {% endif %}
 
 <hr>
+<h3>Comments</h3>
 
-<h3>Comments ({{ object.comments.count }})</h3>
-<div class="comments">
-    {% for comment in object.comments.all %}
-        <div class="comment mb-2 p-2 border rounded">
-            <p><strong>{{ comment.author.username }}</strong> said:</p>
-            <p>{{ comment.content }}</p>
-            <small>Posted on {{ comment.created_at|date:"F j, Y, g:i a" }}</small>
-            {% if user == comment.author %}
-                <div class="mt-1">
-                    <a href="{% url 'blog:edit_comment' comment.id %}" class="btn btn-sm btn-primary">Edit</a>
-                    <a href="{% url 'blog:delete_comment' comment.id %}" class="btn btn-sm btn-danger">Delete</a>
-                </div>
-            {% endif %}
-        </div>
-    {% empty %}
-        <p>No comments yet. Be the first to comment!</p>
-    {% endfor %}
-</div>
+<!-- List of Comments -->
+{% for comment in object.comment_set.all %}
+  <div style="border:1px solid #ddd; padding:10px; margin-bottom:10px;">
+    <p>{{ comment.author }} said:</p>
+    <p>{{ comment.content }}</p>
+    <small>{{ comment.date_posted|date:"F d, Y H:i" }}</small>
+
+    {% if user == comment.author %}
+      <p>
+        <a href="{% url 'blog:edit-comment' comment.pk %}">Edit</a> |
+        <a href="{% url 'blog:delete-comment' comment.pk %}">Delete</a>
+      </p>
+    {% endif %}
+  </div>
+{% empty %}
+  <p>No comments yet. Be the first to comment!</p>
+{% endfor %}
+
+<hr>
+<h3>Add a Comment</h3>
 
 {% if user.is_authenticated %}
-    <h4 class="mt-4">Add a Comment</h4>
-    <form method="post" action="{% url 'blog:add_comment' object.id %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Post Comment</button>
-    </form>
+  <form method="post" action="{% url 'blog:add-comment' object.pk %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Add Comment</button>
+  </form>
 {% else %}
-    <p class="mt-2"><a href="{% url 'blog:login' %}">Login</a> to post a comment.</p>
+  <p><a href="{% url 'blog:login' %}">Log in</a> to add a comment.</p>
 {% endif %}
 
 {% endblock %}
