--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -62,3 +62,11 @@
 {% endif %}
 
 {% endblock %}
+
+<p>Tags:
+{% for tag in post.tags.all %}
+    <a href="{% url 'blog:posts_by_tag' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+{% empty %}
+    No tags
+{% endfor %}
+</p>
