--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -71,4 +71,10 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+<form method="get" action="{% url 'blog:post-search' %}" class="d-flex">
+    <input type="text" name="query" placeholder="Search posts..." class="form-control me-2">
+    <button type="submit" class="btn btn-outline-light">Search</button>
+</form>
+
 </html>
