--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -7,3 +7,9 @@
     <button type="submit" class="btn btn-primary">Publish</button>
 </form>
 {% endblock %}
+
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Save</button>
+</form>
